2001-07-18 16:10 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/macro.c
   * source/vm/hvm.c
     % Simplified logic for suppoting macro lists. Removed global variables:
          int hb_vm_iFunCalls = 0, *hb_vm_aiMacroListParameters = NULL, hb_vm_iMacroListAllocated
       which are no longer needed. No longer using any logic in any PCODE case, other than HB_P_PUSHMACROARG.
       No longer using any arrays, or memory allocations.

   * include/hbexpra.c
   * include/hbexprb.c
     * HB_P_PUSHMACROARG will now be followed with a push symbol sequence, indicating its parrent function call.

   * include/hbpcode.h
     * Added decimal values into the description comments for readability.

2001-07-18 12:17 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/rtl/seconds.c
     + Added Clocks2Secs() function

2001-07-18 11:45 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/hvm.c
     + Added (C level) hb_bProfiler (profiler activity as boolean. False by default)
     + Added (PRG level) __SetProfiler( On | Off )

   * source/vm/classes.c
     + Added hb_bProfiler support.

   * tests\TestProf.prg
     + Added __SetProfiler() call sample.

   * source/rtl/profiler.prg
     - removed Patrick's copyright
       (profiler.prg copyright is mine ;-)

2001-07-18 09:06 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/tbrowse.prg
     + activated scoping
   * include/hbapierr.h
     include/hbapiitm.h
     include/hbvm.h
     source/rtl/errorapi.c
     source/vm/hvm.c
     source/vm/itemapi.c
     ! fixed va_start() use or, better, changed it to be compatible with OS/2 EMX GCC
       compiler which REQUIRES that va_start() calls use a type which cannot be promoted
       to something bigger. That is, this call is correct:
       va_start(valist, ulUnsignedLongType)
       while this one is not:
       va_start(valist, usUnsignedShortType)
       Using a type which can be promoted to a bigger one leads to memory corruption.